# predicate_analysis

./: pyproject.toml
examples/: details.csv  predicates_metakg_querying.ipynb  test.txt
predicate_analysis/: domain_range_constraints.py  edges_using_predicates.json  metakg.csv  parse_query_semmedb.py  predicate_usage.py  predicates.py  predicates_metakg_querying.ipynb  semmeddb_biolink_triples.tsv  testing_treats.py
predicate_analysis/old/: Clinical Data Provider.tsv  ClinicalDataProvider.tsv  Connections Hypothesis Provider.tsv  Expander Agent.tsv  ExpanderAgent.tsv  Exposures Provider.tsv  Genetics Provider.tsv  MolecularDataProvider.tsv  Ranking Agent.tsv  SRITeam.tsv  Service Provider.tsv  imProvingAgent.tsv
tests/: test_predicates.py
