[tool.poetry]
name = "predicates"
version = "0.1.0"
description = ""
authors = ["Sierra Taylor Moxon <sierra.taylor@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
jsonschema = "^4.3.1"
oaklib = "^0.5.3"
bmt = { git = "https://github.com/biolink/biolink-model-toolkit.git", branch = "validate_edge" }


[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
